--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "rewrites": [
         {
             "source": "/api/proxy/:path*",
-            "destination": "http://backend.ascww.org/api/:path*"
+            "destination": "/api/proxy"
         },
         {
             "source": "/news/:id",
