--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
+    "build:prod": "vite build --mode production",
     "preview": "vite preview",
     "test": "playwright test"
   },
