--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,37 @@
 {
-    "cleanUrls": true,
     "rewrites": [
         {
-            "source": "/api/proxy/:path*",
-            "destination": "/api/proxy"
+            "source": "/api/proxy/news/:path*",
+            "destination": "https://backend.ascww.org/api/news/:path*"
         },
         {
             "source": "/news/:id",
             "destination": "/api/ssr?id=:id"
-        },
+        }
+    ],
+    "headers": [
         {
             "source": "/(.*)",
-            "destination": "/index.html"
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "*"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET, POST, PUT, DELETE, OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "X-Requested-With, Content-Type, Authorization"
+                }
+            ]
         }
-    ]
+    ],
+    "functions": {
+        "api/ssr.js": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
+    }
 }
