--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cannon-es": "^0.20.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^11.0.8",
     "gsap": "^3.13.0",
     "http-proxy-middleware": "^3.0.5",
