--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # Production Environment Variables
-VITE_SITE_URL=https://newslast.vercel.app
+VITE_SITE_URL=https://news.ascww.org
 VITE_API_BASE_URL=https://backend.ascww.org/api
