--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,11 +1,23 @@
-RewriteEngine On
-RewriteBase /
-RewriteRule ^index\.html$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.html [L]
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+  RewriteBase /
+  
+  # 1. إذا كان الملف أو المجلد موجوداً، استعرضه مباشرة
+  # هذا مهم جداً لكي تعمل مجلدات الأخبار الثابتة (news/123/index.html)
+  RewriteCond %{REQUEST_FILENAME} -f [OR]
+  RewriteCond %{REQUEST_FILENAME} -d
+  RewriteRule ^ - [L]
 
-<Files 403.shtml>
-order allow,deny
-allow from all
-</Files>
+  # 2. لأي طلب آخر (React Routes)، حوله إلى الصفحة الرئيسية
+  RewriteRule ^ index.html [L]
+</IfModule>
+
+# تحسين الكاش للمتصفحات
+<IfModule mod_expires.c>
+  ExpiresActive On
+  ExpiresByType image/jpg "access plus 1 year"
+  ExpiresByType image/jpeg "access plus 1 year"
+  ExpiresByType image/png "access plus 1 year"
+  ExpiresByType text/css "access plus 1 month"
+  ExpiresByType application/javascript "access plus 1 month"
+</IfModule>
